FIX: Gallery layout issue by adding negative margine

--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,11 @@
             max-width: 100%;
             margin-right: 20px;
         }
+
+        section.container {
+            margin-left: -1rem;
+        }
+        
         .drones_right {
         
             flex-direction: column;        
